update-manager (1:0.124.7) UNRELEASEDkarmic; urgency=low

  * UpdateManager/UpdateManager.py:
    - recalulcate the heading label size dynamically
      to work around bugzilla #101968 (thanks to
      Juergen Kazmirzak for the patch)
  * UpdateManager/backend/__init__.py:
    - fix incomplete check for aptdaemon

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Jul 2009 13:38:11 +0200

update-manager (1:0.124.6) karmic; urgency=low

  [ Oliver Grawert ]
  * DistUpgrade/DistUpgradeQuirks.py: add check for ARMv6 or 
    greater to prevent jaunty->karmic upgrades on unsupported 
    armel CPU arches

  [ Michael Vogt ]
  * UpdateManager/SimpleGtkbuilderApp.py:
    - updated to deal with widgets that overwrite get_name
  * update-manager:
    - add "--data-dir" switch
  * use aptdaemon as the install backend (if avaialble)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 24 Jul 2009 15:49:09 +0200

update-manager (1:0.124.5) karmic; urgency=low

  * debian/update-manager-core.links: change the update-motd link for
    release_upgrade to match other links (- instead of _), and move it
    to 91 (just after updates-available at 90), such that it's printed
    toward the end of the MOTD, rather than at 10, which is the beginning.

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 16 Jul 2009 17:41:04 -0500

update-manager (1:0.124.4) karmic; urgency=low

  * debian/control: recommend libpam-modules, rather than update-motd

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 16 Jul 2009 11:29:27 -0500

update-manager (1:0.124.3) karmic; urgency=low

  [ Michael Vogt ]
  * UpdateManager/UpdateManager.py:
    - fix description display (LP: #379945), thanks
      to Richard Thomas
    - fix crash in refresh_updates_count()
  * DistUpgrade/DistUpgradeApport.py:
    - deal with errors from apport better (LP: #357339),
      thanks to Patrick Horn)
  * UpdateManager/ChangelogViewer.py:
    - fix problem for http://host/document.html. style 
      entries (LP: #396393)
