@@ -6,6 +6,8 @@ update-manager (1:0.124.7) UNRELEASEDkarmic; urgency=low
       Juergen Kazmirzak for the patch)
   * UpdateManager/backend/__init__.py:
     - fix incomplete check for aptdaemon
+  * DistUpgrade/DistUpgradeController.py:
+    - merge fixes from Brian Murray (thanks!), LP: #404274
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Jul 2009 13:38:11 +0200
 
